# session-tunes

./: .gitignore  3  README.md  \  init.sql  links.txt  mueller.db  package-lock.json  package.json  schema.cypher  schema.puml  server.js  session.db  sql2puml.py
abc/: afigforakiss.abc  anlondubh.abc  banishmisfortune.abc  billnicholsons67thbirthday.abc  blackrogue.abc  blarneypilgrim.abc  boysofthetown.abc  brendacastless.abc  bunchofkeys.abc  butterfly.abc  callanbridge.abc  castlekelly.abc  chicago.abc  cuckoo.abc  cuilaodha.abc  cupoftea.abc  diplodocus.abc  donaldblue.abc  drowsymaggie.abc  earlschair.abc  eavesdropper.abc  fatherkelly.abc  fatherogradystriptobocca.abc  forgetmenot.abc  foxhuntersjig.abc  frostisallover.abc  garechswedding.abc  gormans.abc  huntershouse.abc  ifwehadntanymenintheworld.abc  ifwehadntanywomenintheworld.abc  ineershallweanher.abc  jerrysbeaverhat.abc  jimmymcgettricks.abc  jimmywardsfavorite.abc  kerfunken.abc  kidonthemountain.abc  killaviljig.abc  ladsoflaois.abc  larryredicansmother.abc  (+41 more)
scraping/: pyproject.toml
scraping/scraping/: scrape.py
scripts/: pyproject.toml
scripts/scripts/: SessionDataManager.py  audio.py  parse_audio.py  scrape.py  sdm.py  to_midi.py  to_wav.py
