[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
