[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
music21 = "^9.1.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
