[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2.post1"
mido = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
